# datasciense

./: Pathrise.ipynb  Python_Session2.ipynb  README.md  Salary_Prediction_project.ipynb  Week2.ipynb  Week3.ipynb  Week4.ipynb  Week4_2.ipynb  Week5.ipynb  Week6.ipynb  Week8_ML_LR.ipynb
.devcontainer/: devcontainer.json
Pathrise/: Pathrise.ipynb  Pathrise_ML1.ipynb  Pathrise_cleaned.ipynb
Project_salary/: project.txt
Projects/: States_Election_result_Map_2016.ipynb
Projects/1-DS_Salary_Estimator/: project.txt  salary_estimator.pkl
Projects/10-HandWritten_Digits_Classification/: Handwritten_Digits_Classification.ipynb  Readme
Projects/11-EasyOCR-PyTorch/: OCR_PyTorch.ipynb
Projects/12-OpenCV-Contour Detection/: Contour_Detection_OpenCV.ipynb
Projects/13-Open Image Dataset Downloader/: Open_Image_Dataset_Downloader.ipynb
Projects/14-Yolov8-Fruits-object Detection/: YOLOV8_Object_Detections.ipynb
Projects/15-Yolov8-FloorPlan-Object detection/: Yolov8_Roboflow_dataset_floorplan_detection.ipynb
Projects/2-Pathrise/: Data_Pathrise.xlsx  (+3 more)
Projects/new/: README.md  pyproject.toml
Projects/new/app/core-app/: app.py
Projects/new/app/core-app/.streamlit/: secrets.toml
Projects/new/app/core-app/home/: home.py  login.py
Projects/new/app/core-app/reports/: alerts.py  dashboard.py
Projects/new/app/data-team-app/: app.py
Projects/new/app/ml-team-app/: RiskAnalysis.py  app.py
Projects/new/app/ui-team-app/: app.py  compliance.py  inspection.py  utils.py
pathrise/: Pathrise.ipynb
week9/: Salary_Estimator_Project.ipynb  week9_pb_ds_ex.ipynb
(+42 files in other folders)
